<resources>
    <string name="app_name">Gladminds Eng App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="login_via_otp">Login via OTP ?</string>
    <string name="username">UserName</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="get_otp">Get Otp</string>
    <string name="enter_otp_hint">Enter OTP</string>
    <string name="enter_username_hint">Enter Username</string>
    <string name="login_with_password">Login with Password ?</string>
    <string name="continues">Continue</string>
    <string name="otp_sent_successfully">Otp Sent Successfully</string>
    <string name="accept">Accept</string>
    <string name="accept_case">Accept Case</string>
    <string name="reject_case">Reject Case</string>
    <string name="reject">Reject</string>
    <string name="view_case">View Case</string>
    <string name="start_journey">Start Journey</string>
    <string name="navigate">Navigate</string>
    <string name="stop_journey">Stop Journey</string>


    <string name="cases">Cases</string>
    <string name="newStr">New</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="closed">Closed</string>
    <string name="statistics">Statistics</string>
    <string name="total_work_time">Total Work Time</string>
    <string name="breakdown">Breakdown</string>
    <string name="total_journey_time">Total Journey Time</string>
    <string name="visits">Visits</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="date_range">Select date range</string>

    <string name="engineer_remark">Engineer’s Remarks</string>
    <string name="customer_remark">Customer’s Remarks</string>

    <string name="customer_name">Customer Name</string>
    <string name="customer_name_placeholder">Enter Name Here</string>
    <string name="customer_email">Customer Email</string>
    <string name="customer_email_placeholder">Enter Email Here</string>
    <string name="customer_phone">Phone</string>
    <string name="customer_phone_placeholder">Enter Phone Number Here</string>
    <string name="customer_designation">Designation</string>
    <string name="customer_designation_placeholder">Enter Designation Here</string>
    <string name="add_photo">Add Photo</string>

    <string name="your_journey_has_started_successfully_if_you_would_like_to_navigate_to_the_case_s_location_tap_navigate">Your journey has started successfully. If you would like to navigate to the case’s location, tap “Navigate”</string>
    <string name="commissioning">Commissioning</string>
    <string name="cancel">Cancel</string>
    <string name="provide_reason_to_reject">Provide Reason To Reject</string>
    <string name="reason">Reason</string>
    <string name="input_reason_here">Input Reason here....</string>
    <string name="submit_and_reject">Submit And Reject</string>
    <string name="something_went_wrong">Something Went wrong</string>
    <string name="no_new_cases_found">No New Cases found</string>
    <string name="no_visit_found">No Visit Found</string>
    <string name="no_open_cases_found">No Open Cases found</string>
    <string name="no_closed_cases_found">No Closed Cases found</string>
    <string name="click_accept_to_confirm_once_accepted_you_can_view_this_ticket_in_assigned_tab">Click \'Accept\' to confirm. Once accepted, you can view this ticket in \'Open Cases\' tab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="instruction_to_you">Instruction To You</string>
    <string name="record_observation">Record Observation</string>
    <string name="stop_work">Stop Work</string>
    <string name="is_another_visit_required">Is Another Visit Required?</string>
    <string name="self_visit">Self visit</string>
    <string name="schedule_date">Schedule Date</string>


    <string name="rationale_camera">This app needs access to your camera so you can take pictures.</string>
    <string name="rationale_read_adn_write">This app needs access to your gallery so you can add pictures.</string>
    <string name="rationale_read_and_write_camera">This app needs access to your camera and gallery so you can add pictures.</string>
    <string name="rationale_push_notification">This app needs notification permission to show notifications</string>
    <string name="returned_from_app_settings_to_activity">
        Returned from app settings to MainActivity with the following permissions:
        \n\nCamera: %s
        \nLocation: %s
        \nSMS: %s
        \nContacts: %s
    </string>
    <string name="enter_visit_input">Enter Visit Input</string>
    <string name="start_work">Start Work</string>
    <string name="commissioning_case_accepted">Commissioning Case Accepted</string>
    <string name="commissioning_case_rejected">Commissioning Case Rejected</string>
    <string name="open_case">Open Case</string>
    <string name="visit_summery">Visit Summery</string>
    <string name="conclude_case">Conclude Case</string>
    <string name="enter_remark">Enter Remark</string>
    <string name="view_observation">View Observation</string>
    <string name="view_overall">View Overall</string>
    <string name="view_action_overall">view_action_overall</string>
    <string name="view_action_section">view_action_section</string>
    <string name="confirm">Confirm</string>

    <string name="request_setisfication_code">Request Satisfaction Code</string>
    <string name="double_tap_hint">Double tap to clear the sign</string>
    <string name="save"></string>
    <string name="customer_feedback">Customer’s Feedback</string>
    <string name="customer_signature">Customer’s Signature</string>
    <string name="sign_here">Sign Here</string>
    <string name="setisfication_code">Satisfaction Code</string>
    <string name="setisfication_code_placeholder">Enter Satisfaction Code Here</string>
    <string name="code_not_provide">Code Not Provided?</string>
    <string name="submit">Submit</string>
    <string name="title_conclution_form">Conclusion Form</string>
    <string name="warranty_amp_other_details"><![CDATA[Warranty & Other Details]]></string>
    <string name="out_of_warranty">Out of Warranty</string>
    <string name="add">Add</string>
    <string name="parts_added">Parts Added</string>
    <string name="in_warranty">In Warranty</string>
    <string name="batch_number_of_new_part">Batch Number of new part</string>
    <string name="enter_batch_number">Enter Batch Number</string>
    <string name="add_another_batch">Add Another Batch</string>
    <string name="add_part">Add Part</string>
    <string name="why1">Why 1</string>
    <string name="why2">Why 2</string>
    <string name="why3">Why 3</string>
    <string name="why4">Why 4</string>
    <string name="why5">Why 5</string>
    <string name="view_photos"><u>View Photos</u></string>
    <string name="view_docs"><u>View Documents</u></string>
    <string name="enter_reason_here">Enter Reason Here...</string>
    <string name="claim_part">Claim Part</string>
    <string name="confirm_claim">Confirm Claim</string>
    <string name="enter_root_analysis">Enter Root Analysis Here...</string>
    <string name="view_supplier_information">View Supplier Information</string>
    <string name="add_supplier_information">Add Supplier Information</string>
    <string name="serial_number_of_new_part">Serial Number of new part</string>
    <string name="bill_of_materials">Bill Of Materials</string>
    <string name="go_to_visit">Go to visit</string>
    <string name="customer_information">Customer Information</string>
    <string name="default_notification_channel_id">GLADMIND_MAIN_CHANNEL_ID</string>
</resources>