<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person_outline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCustomerTitle"
        style="@style/M3_label_medium1"
        android:textStyle="bold"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        android:layout_height="wrap_content"
        android:text="Customer Details"
        android:layout_marginLeft="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/customer_name"
        app:hintAnimationEnabled="false"
        app:expandedHintEnabled="false"
        android:layout_marginTop="@dimen/margin_medium"
        app:boxCornerRadiusTopStart="@dimen/corner_radius_medium"
        app:boxCornerRadiusTopEnd="@dimen/corner_radius_medium"
        app:boxCornerRadiusBottomStart="@dimen/corner_radius_medium"
        app:boxCornerRadiusBottomEnd="@dimen/corner_radius_medium"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCustomerName"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
            android:hint="@string/customer_name_placeholder"
            android:gravity="top"
            android:height="@dimen/height_text_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/padding_medium" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        app:layout_constraintTop_toBottomOf="@+id/tilName"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/customer_email"
        app:hintAnimationEnabled="false"
        app:expandedHintEnabled="false"
        android:layout_marginTop="@dimen/margin_medium"
        app:boxCornerRadiusTopStart="@dimen/corner_radius_medium"
        app:boxCornerRadiusTopEnd="@dimen/corner_radius_medium"
        app:boxCornerRadiusBottomStart="@dimen/corner_radius_medium"
        app:boxCornerRadiusBottomEnd="@dimen/corner_radius_medium"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCustomerEmail"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
            android:hint="@string/customer_email_placeholder"
            android:gravity="top"
            android:height="@dimen/height_text_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/padding_medium" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPhone"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/customer_phone"
        app:hintAnimationEnabled="false"
        app:expandedHintEnabled="false"
        android:layout_marginTop="@dimen/margin_medium"
        app:boxCornerRadiusTopStart="@dimen/corner_radius_medium"
        app:boxCornerRadiusTopEnd="@dimen/corner_radius_medium"
        app:boxCornerRadiusBottomStart="@dimen/corner_radius_medium"
        app:boxCornerRadiusBottomEnd="@dimen/corner_radius_medium"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCustomerPhone"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
            android:hint="@string/customer_phone_placeholder"
            android:gravity="top"
            android:height="@dimen/height_text_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:maxLength="10"
            android:inputType="number"
            android:padding="@dimen/padding_medium" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDesignation"
        app:layout_constraintTop_toBottomOf="@+id/tilPhone"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/customer_designation"
        app:hintAnimationEnabled="false"
        app:expandedHintEnabled="false"
        android:layout_marginTop="@dimen/margin_medium"
        app:boxCornerRadiusTopStart="@dimen/corner_radius_medium"
        app:boxCornerRadiusTopEnd="@dimen/corner_radius_medium"
        app:boxCornerRadiusBottomStart="@dimen/corner_radius_medium"
        app:boxCornerRadiusBottomEnd="@dimen/corner_radius_medium"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCustomerDesignation"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
            android:hint="@string/customer_designation_placeholder"
            android:gravity="top"
            android:height="@dimen/height_text_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/padding_medium" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRemarksCustomer"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/customer_remark"
        app:hintAnimationEnabled="false"
        app:expandedHintEnabled="false"
        android:layout_marginTop="@dimen/margin_medium"
        app:boxCornerRadiusTopStart="@dimen/corner_radius_medium"
        app:boxCornerRadiusTopEnd="@dimen/corner_radius_medium"
        app:boxCornerRadiusBottomStart="@dimen/corner_radius_medium"
        app:boxCornerRadiusBottomEnd="@dimen/corner_radius_medium"
        app:layout_constraintTop_toBottomOf="@+id/tilDesignation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCustomerRemarks"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
            android:hint="@string/enter_remark"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="126dp"
            android:inputType="text"
            android:padding="@dimen/padding_medium" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>