<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/corner_radius_large"
    android:backgroundTint="#FFFFFF"
    >

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:src="@drawable/ic_done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            style="@style/M3_heading_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:text="@string/commissioning"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSubHeading"
            style="@style/M3_body_medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:text="@string/your_journey_has_started_successfully_if_you_would_like_to_navigate_to_the_case_s_location_tap_navigate"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


        <View
            android:id="@+id/dummyView3"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="6dp"
            android:background="@color/md_theme_outlineVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubHeading" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPositive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorSuccess"
            android:paddingHorizontal="@dimen/padding_extra_large"
            android:text="@string/accept"
            app:layout_constraintBottom_toBottomOf="@+id/btnNegative"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnNegative"
            app:layout_constraintTop_toBottomOf="@+id/dummyView3"
            app:layout_constraintTop_toTopOf="@+id/btnNegative" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNegative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            android:backgroundTint="@color/md_theme_secondaryContainer"
            android:text="@string/navigate"
            android:textColor="@color/md_theme_onSecondaryContainer"
            app:icon="@drawable/navigation"
            app:iconTint="@color/md_theme_scrim"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnPositive"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dummyView3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
